--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/tweekledb
     username: postgres
-    password: postgres
+    password: postgres123
     driverClassName: org.postgresql.Driver
   sql:
     init:
