--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ spring:
     hibernate:
       ddl-auto: update
   datasource:
-    url: jdbc:postgresql://localhost:5432/tweekledb
+    url: jdbc:postgresql://localhost:5432/tweekledbtest
     username: postgres
     password: postgres
     driverClassName: org.postgresql.Driver
