--- a/frontend/tweekles-frontend/package.json
+++ b/frontend/tweekles-frontend/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/webrtc": "^0.0.32",
+    "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
