--- a/frontend/tweekles-frontend/package.json
+++ b/frontend/tweekles-frontend/package.json
@@ -16,10 +16,11 @@
     "@types/react-dom": "^18.0.6",
     "@types/webrtc": "^0.0.32",
     "axios": "^0.27.2",
+    "i": "^0.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
